replace http://perspectiveteam.com on https://perspectiveteam.com

--- a/files for admin/CMS Pages/content/cookie-policy.html
+++ b/files for admin/CMS Pages/content/cookie-policy.html
@@ -11,7 +11,7 @@
           <h2 class="h4">
             This Cookie Policy explains how Arthur Potul'nyj Private Entrepreneur ("Company," "we," "us," and "our")
             uses cookies and similar technologies to recognize you when you visit our website at
-            <a href="https://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com</a> ("Website"). It
+            <a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com</a> ("Website"). It
             explains what these technologies are and why we use them, as well as your rights to control our use of them.
           </h2>
           <br />
@@ -147,7 +147,7 @@
                 <div>
                   Hotjar
                   <a href="https://www.hotjar.com/policies/do-not-track/" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -225,14 +225,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com</a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   <a href="https://www.hubspot.com/" class="_text-orange">Hubspot.com </a>
                   <a href="https://legal.hubspot.com/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -264,14 +264,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://www.hotjar.com/legal/policies/privacy/" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -301,14 +301,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://www.hotjar.com/legal/policies/privacy/" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -341,14 +341,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Google analytics
                   <a href="https://policies.google.com/technologies/ads" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -382,14 +382,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://help.hotjar.com/hc/en-us/articles/115011789248-Hotjar-Cookies" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -422,7 +422,7 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
@@ -430,7 +430,7 @@
                   <a href="https://www.hubspot.com/" class="_text-orange">Hubspot.com </a>
 
                   <a href="https://legal.hubspot.com/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -460,14 +460,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://help.hotjar.com/hc/en-us/articles/115011789248-Hotjar-Cookies" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -497,14 +497,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://help.hotjar.com/hc/en-us/articles/115011789248-Hotjar-Cookies" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -537,14 +537,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Google analytics
                   <a href="https://policies.google.com/technologies/ads" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -574,7 +574,7 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
@@ -582,7 +582,7 @@
                   <a href="https://www.hubspot.com/" class="_text-orange">Hubspot.com </a>
 
                   <a href="https://legal.hubspot.com/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -615,14 +615,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Google analytics
                   <a href="https://policies.google.com/technologies/ads" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -655,14 +655,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Google analytics
                   <a href="https://policies.google.com/technologies/ads" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -695,14 +695,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://help.hotjar.com/hc/en-us/articles/115011789248-Hotjar-Cookies" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -736,14 +736,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Google analytics
                   <a href="https://policies.google.com/technologies/ads" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -773,14 +773,14 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
                 <div>
                   Hotjar
                   <a href="https://help.hotjar.com/hc/en-us/articles/115011789248-Hotjar-Cookies" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -813,7 +813,7 @@
               </li>
               <li>
                 <div>Provider:</div>
-                <div><a href="http://perspectiveteam.com" class="_text-orange">http://perspectiveteam.com </a></div>
+                <div><a href="https://perspectiveteam.com" class="_text-orange">https://perspectiveteam.com </a></div>
               </li>
               <li>
                 <div>Service:</div>
@@ -821,7 +821,7 @@
                   <a href="https://www.hubspot.com/" class="_text-orange">Hubspot.com </a>
 
                   <a href="https://legal.hubspot.com/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -872,7 +872,7 @@
                 <div>
                   LinkedIn
                   <a href="https://www.linkedin.com/legal/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -909,7 +909,7 @@
                 <div>
                   Linkedin Ad Analytics
                   <a href="https://www.linkedin.com/legal/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -951,7 +951,7 @@
                 <div>
                   LinkedIn
                   <a href="https://www.linkedin.com/legal/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -999,7 +999,7 @@
                 <div>
                   Linkedin Ad Analytics
                   <a href="https://www.linkedin.com/legal/privacy-policy" class="_text-orange"
-                    >View Service Privacy Policy
+                  >View Service Privacy Policy
                   </a>
                 </div>
               </li>
@@ -1402,24 +1402,18 @@
             </p>
             <ul class="_list">
               <li>
+                <a href="https://support.google.com/chrome/answer/95647#zippy=%2Callow-or-block-cookies" class="_text-orange">Chrome</a>
+              </li>
+              <li>
                 <a
-                  href="https://support.google.com/chrome/answer/95647#zippy=%2Callow-or-block-cookies"
-                  class="_text-orange"
-                  >Chrome</a
+                        href="https://support.microsoft.com/en-us/windows/delete-and-manage-cookies-168dab11-0753-043d-7c16-ede5947fc64d" class="_text-orange"
+                >Internet Explorer</a
                 >
               </li>
               <li>
                 <a
-                  href="https://support.microsoft.com/en-us/windows/delete-and-manage-cookies-168dab11-0753-043d-7c16-ede5947fc64d"
-                  class="_text-orange"
-                  >Internet Explorer</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://support.mozilla.org/en-US/kb/enhanced-tracking-protection-firefox-desktop?redirectslug=enable-and-disable-cookies-website-preferences&redirectlocale=en-US"
-                  class="_text-orange"
-                  >Firefox</a
+                        href="https://support.mozilla.org/en-US/kb/enhanced-tracking-protection-firefox-desktop?redirectslug=enable-and-disable-cookies-website-preferences&redirectlocale=en-US" class="_text-orange"
+                >Firefox</a
                 >
               </li>
               <li>
@@ -1427,9 +1421,8 @@
               </li>
               <li>
                 <a
-                  href="https://support.microsoft.com/en-us/windows/microsoft-edge-browsing-data-and-privacy-bb8174ba-9d73-dcf2-9b4a-c582b4e640dd"
-                  class="_text-orange"
-                  >Edge</a
+                        href="https://support.microsoft.com/en-us/windows/microsoft-edge-browsing-data-and-privacy-bb8174ba-9d73-dcf2-9b4a-c582b4e640dd" class="_text-orange"
+                >Edge</a
                 >
               </li>
               <li>
@@ -1444,17 +1437,13 @@
 
             <ul class="_list">
               <li>
-                <a href="https://optout.aboutads.info/?c=2&lang=EN" class="_text-orange"
-                  >Digital Advertising Alliance</a
-                >
+                <a href="https://optout.aboutads.info/?c=2&lang=EN" class="_text-orange">Digital Advertising Alliance</a>
               </li>
               <li>
                 <a href="https://youradchoices.ca/" class="_text-orange">Digital Advertising Alliance of Canada</a>
               </li>
               <li>
-                <a href="https://www.youronlinechoices.com/" class="_text-orange"
-                  >European Interactive Digital Advertising Alliance</a
-                >
+                <a href="https://www.youronlinechoices.com/" class="_text-orange">European Interactive Digital Advertising Alliance</a>
               </li>
             </ul>
           </section>
@@ -1491,14 +1480,14 @@
               If you do not want Flash Cookies stored on your computer, you can adjust the settings of your Flash player
               to block Flash Cookies storage using the tools contained in the
               <a
-                href="http://www.macromedia.com/support/documentation/en/flashplayer/help/settings_manager07.html"
-                class="_text-orange"
-                >Website Storage Settings Panel </a
+                      href="http://www.macromedia.com/support/documentation/en/flashplayer/help/settings_manager07.html"
+                      class="_text-orange"
+              >Website Storage Settings Panel </a
               >. You can also control Flash Cookies by going to the
               <a
-                href="http://www.macromedia.com/support/documentation/en/flashplayer/help/settings_manager03.html"
-                class="_text-orange"
-                >Global Storage Settings Panel
+                      href="http://www.macromedia.com/support/documentation/en/flashplayer/help/settings_manager03.html"
+                      class="_text-orange"
+              >Global Storage Settings Panel
               </a>
               and following the instructions (which may include instructions that explain, for example, how to delete
               existing Flash Cookies (referred to "information" on the Macromedia site), how to prevent Flash LSOs from
