change breeze block

--- a/files for admin/CMS Blocks/breeze-footer.html
+++ b/files for admin/CMS Blocks/breeze-footer.html
@@ -229,7 +229,7 @@
           }"
         >
             <h2 class="h2 footer-alt__title">Ready to take your business to the next level?</h2>
-            <p>We are here to help you. Ask about The PayPal Checkout</p>
+            <p>We are here to help you. Ask about Magento Breeze theme</p>
             <form
                     id="form_one_of_us"
                     class="get-started__form form-contact"
