email content upd

--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -1284,14 +1284,14 @@
                                         style="
                                           bottom: 0;
                                           right: 0;
-                                          margin-top: 10%;
-                                          margin-bottom: 10%;
+                                          margin-top: 0;
+                                          margin-bottom: 0;
                                           margin-left: auto;
                                           margin-right: auto;
                                           display: block;
-                                          width: 140px;
+                                          width: 180px;
                                         "
-                                        src="https://github.com/rostilos/new-perspective/blob/master/email-templates/images/ecommerce-berlin/3926908.png?raw=true"
+                                        src="https://github.com/rostilos/new-perspective/blob/master/email-templates/images/ecommerce-berlin/top-5.png?raw=true"
                                         alt="img"
                                       />
                                     </td>
@@ -1323,7 +1323,7 @@
                       <tr style="vertical-align: top">
                         <td class="updates-square__number">
                           <img
-                            src="https://raw.githubusercontent.com/rostilos/new-perspective/master/email-templates/images/ecommerce-berlin/numbers/4.png"
+                            src="https://raw.githubusercontent.com/rostilos/new-perspective/master/email-templates/images/ecommerce-berlin/numbers/5.png"
                             alt="4"
                           />
                         </td>
