--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -482,6 +482,11 @@
           max-width: 210px !important;
         }
       }
+      @media screen and (max-width: 599px) {
+        .section-corporate-upd__image {
+          padding-bottom: 34px !important;
+        }
+      }
     </style>
   </head>
   <body>
@@ -608,8 +613,8 @@
                               style="font-weight: 400; padding-bottom: 10px; font-size: 16px; line-height: 24px"
                             >
                               <span>
-                                Boost sales with Magento, optimize SEO, and discover the impact of AI chatbots in
-                                retail.
+                                Keep up with the latest in e-commerce with our newsletter. Boost sales with Magento,
+                                optimize SEO, and discover the impact of AI chatbots in retail.
                                 <br />
                                 <br />
                               </span>
@@ -669,9 +674,7 @@
                               E-Commerce Expo 2023 Stockholm
                             </h2>
                             <p class="text-base" style="padding-bottom: 35px">
-                              Join us for the E-Commerce Expo 2023 in Stockholm, taking place from May 31st to June 1st,
-                              where we'll explore the latest innovations and trends in the dynamic world of online
-                              retail
+                              Join us to explore the latest innovations and trends in the dynamic world of online retail
                             </p>
                           </td>
                         </tr>
@@ -773,7 +776,7 @@
                                 class="text-xs"
                                 style="text-align: left; font-weight: 500; color: #949494; margin-bottom: 12px"
                               >
-                                April 13, 2022
+                                April 13, 2023
                               </p>
                               <a
                                 href="https://perspectiveteam.com/blog/9-ways-how-you-can-use-chatgpt-in-ecommerce/"
