change page security audit

--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -62,8 +62,7 @@
               </div>
               <div class="service-square-item__title h4">Reducing the risk of cyber-attacks</div>
               <p class="service-square-item__text">
-                Cyber attacks can be prevented by providing IT audits and taking all security measures.
-                Perspective Team scans the website for malware and gives a vulnerability assessment, checks how it could be easy for the hacker to access sensitive files, server, and admin panel, and checks the level of password protection and the software for other security weaknesses.
+                IT audits, malware scanning, vulnerability assessment
               </p>
             </div>
           </div>
@@ -75,7 +74,7 @@
               </div>
               <div class="service-square-item__title h4">Customer data security</div>
               <p class="service-square-item__text">
-                Companies must invest in protecting their customer's data as data breaches could be a serious issue that leads to data breach, the loss of reputation, and potential financial losses. Companies can take several steps to enhance data security, such as using encryption technologies, implementing multi-factor authentication, and regularly updating their software.
+                Encryption, multi-factor authentication, regular software updates
               </p>
             </div>
           </div>
@@ -87,7 +86,7 @@
               </div>
               <div class="service-square-item__title h4">Enhancing website operability</div>
               <p class="service-square-item__text">
-                By regularly keeping software up to date, improving your business's operability can prevent potential downtime. Implementing security auditing, risk management programs and IT security risk assessment practices can safeguard sensitive data and ensure seamless website performance. This proactive approach to website security minimizes the risk of interruptions and allows your business to maintain a solid online presence.
+                Regular software updates, risk management, seamless performance
               </p>
             </div>
           </div>
@@ -99,7 +98,7 @@
               </div>
               <div class="service-square-item__title h4">Enhancing regulatory compliance</div>
               <p class="service-square-item__text">
-                A Magento security audit ensures your business complies with relevant industry regulations and standards. The audit process helps you address compliance requirements and avoid penalties by identifying potential security gaps and vulnerabilities. Additionally, an audit demonstrates your organization's commitment to data protection and information security, fostering trust among customers, partners, and regulators.
+                Compliance auditing, data protection, trust fostering.
               </p>
             </div>
           </div>
@@ -111,7 +110,7 @@
               </div>
               <div class="service-square-item__title h4">Optimizing IT infrastructure</div>
               <p class="service-square-item__text">
-                A Magento security audit enables your IT department to refine IT systems and processes. Assessing your IT system and infrastructure identifies vulnerability and improvement areas, leading to establishing more robust security procedures. This results in better efficiency and more resilient IT infrastructure.
+                IT system assessment, robust procedures, improved efficiency
               </p>
             </div>
           </div>
@@ -123,7 +122,7 @@
               </div>
               <div class="service-square-item__title h4">Improving customer loyalty</div>
               <p class="service-square-item__text">
-                Avoiding data breaches is crucial in building trust with customers. Customers who feel their personal information is safe will likely continue buying on the website. Security strategy influences customer loyalty, and maintaining a transparent ear IT security process and audit trail helps prevent data breaches and fosters consumer confidence.
+                Data protection, transparency, customer trust
               </p>
             </div>
           </div>
@@ -135,7 +134,7 @@
               </div>
               <div class="service-square-item__title h4">Securing third-party integrations</div>
               <p class="service-square-item__text">
-                Online stores often rely on third-party integrations and extensions to enhance functionality and improve customer experience. A Magento security audit scrutinizes all these integrations, ensuring they adhere to the highest security standards and not introduce vulnerabilities to your e-commerce platform.
+                Security checks for integrations, high-standard adherence
               </p>
             </div>
           </div>
@@ -612,13 +611,12 @@
         <img
                 loading="lazy"
                 src="{{view url='Mirasvit_Blog::images/article/gtm/rocket.gif'}}"
-                class="form-success-message__image"
                 alt="Gif with a flying rocket indicating the successful process of sending the form"
         />
-        <h4 class="h4 form-success-message__title">Thank you!</h4>
-        <h5 class="h5 form-success-message__subtitle">We will contact you shortly.</h5>
+        <h5 class="h5">Thank you!</h5>
+        <h6 class="h6">We will contact you shortly.</h6>
         <button
-                class="form-success-message__button _button _button--white"
+                class="form-contact__submit footer__button _button _button--white success-form"
                 @click="toggleSuccessMessage()"
         >
           <span class="_button__text">Send another message</span>
