change cms pages

--- a/files for admin/CMS Pages/services/magento-development.html
+++ b/files for admin/CMS Pages/services/magento-development.html
@@ -156,8 +156,8 @@
             </div>
 
           </div>
-          <div class="service-table-pros__item _h4">
-            Two pros <br> in one box
+          <div class="service-table-pros__item ">
+            <div class="_h4">Two pros <br> in one box</div>
           </div>
           <div class="service-table-pros__item">
             <img src="{{media url='wysiwyg/Service/magento-development/8.svg'}}" alt="Two pros in one box" />
@@ -177,7 +177,7 @@
         <p class="preface">
           Our obsession with technology and excellence, paired with deep ecommerce business knowledge, has earned our agency a reputation as one of Eastern Europe’s most experienced and technically capable commerce agencies.
         </p>
-        <div class="service-single__collapsible _collapsible">
+        <div class="service-single__collapsible">
           <!-- 1 -->
           <div class="how_do_it_item">
             <h4 class="_h4">
@@ -253,10 +253,10 @@
       <div class="service-single__content">
         <div class="choose-us-header">
           <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
-            We’re a team that <br> want to be a part <br>
+            We’re a team that want to be a part
             of a big story
           </h2>
-          <p style="margin-bottom: 24px">
+          <p class="preface">
             We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
           </p>
         </div>
