--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -22,7 +22,7 @@
         </p>
         <p class="h4">Having a profound experience as the IT security auditor in risk assessment and retail security solutions Perspective team can create a customized security plan that meets your needs.</p>
         <a
-                href=".footer"
+                href="#footer"
                 class="_button _button--orange-bg _scrollTo optimization-page-intro__button--dt"
                 style="max-width: 230px"
         >
@@ -37,7 +37,7 @@
         </div>
       </div>
       <a
-              href=".footer"
+              href="#footer"
               class="_button _button--orange-bg _button--arrow _scrollTo optimization-page-intro__button--mobile"
       >
         <h5 class="h5 _button__text">Let’s do it!</h5>
@@ -53,7 +53,7 @@
       <div class="service-single__content service-single__content--wide">
         <h2 class="h3 service-single__title" itemprop="name">Benefits of Getting <br /> an IT Security Audit
         </h2>
-        <div class="service-single__squares service-table-squares">
+        <div class="service-single__squares service-table-squares service-table-squares-3col">
           <!-- 1 -->
           <div class="service-table-squares__item">
             <div class="service-square-item__body">
