change servises page

--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -192,7 +192,7 @@
 
         <button class="_button _button--arrow" onclick="window.location.href='/company'">
           <span class="_button__text">More about us</span>
-          <span class="_button__text-overlay _button__text-overlay--black" style="clip: rect(0px, 0px, 24px, 0px)"
+          <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
           >More about us</span
           >
           <span class="_button__overlay _button__overlay--hover"></span>
