--- a/files for admin/CMS Pages/services/server-optimization.html
+++ b/files for admin/CMS Pages/services/server-optimization.html
@@ -59,7 +59,7 @@
           Why should you <br />
           order the service?
         </h2>
-        <div class="service-single__squares service-table-squares">
+        <div class="service-single__squares service-table-squares service-table-squares-3col">
           <!-- 1 -->
           <div class="service-table-squares__item">
             <div class="service-square-item__body">
@@ -206,7 +206,7 @@
                 class="form-contact__submit footer__button _button _button--white"
         >
           <span class="_button__text">Let’s do it!</span>
-          <span class="_button__text-overlay _button__text-overlay--black">Let’s do it!</span>
+          <span class="_button__text-overlay">Let’s do it!</span>
           <span class="_button__overlay _button__overlay--hover"></span>
           <span class="_button__overlay _button__overlay--active"></span>
         </button>
