--- a/files for admin/CMS Pages/services/magento-development.html
+++ b/files for admin/CMS Pages/services/magento-development.html
@@ -51,7 +51,8 @@
       <div class="service-single__label _section-label" itemprop="keywords">Advantages</div>
       <!-- content (span 2) -->
       <div class="service-single__content service-single__content--wide">
-        <h2 class="h3 service-single__title" itemprop="name">Industial leaders<br />chose Magento
+        <h2 class="h3 service-single__title" itemprop="name">Why do industrial leaders
+          <br />choose Magento?
         </h2>
         <div class="service-single__squares service-table-squares">
           <!-- 1 -->
@@ -72,9 +73,9 @@
               <div class="service-square-item__image">
                 <img src="{{media url='wysiwyg/Service/magento-development/3.svg'}}" alt="" />
               </div>
-              <div class="service-square-item__title h4">250k+ merchants in 180+ countries</div>
+              <div class="service-square-item__title h4">Full control over the data</div>
               <p class="service-square-item__text">
-                Multi-language and multi-currency capabilities
+                Hosted or on-premises environments
               </p>
             </div>
           </div>
@@ -84,10 +85,11 @@
               <div class="service-square-item__image">
                 <img src="{{media url='wysiwyg/Service/magento-development/4.svg'}}" alt="" />
               </div>
-              <div class="service-square-item__title h4">Full control over the data</div>
+              <div class="service-square-item__title h4">5,000+ pre-built extensions</div>
               <p class="service-square-item__text">
-                Hosted or on-premises environments
+                The most vibrant e-commerce ecosystem
               </p>
+
             </div>
           </div>
           <!-- 4 -->
@@ -96,9 +98,9 @@
               <div class="service-square-item__image">
                 <img src="{{media url='wysiwyg/Service/magento-development/5.svg'}}" alt="" />
               </div>
-              <div class="service-square-item__title h4">Robust Security</div>
+              <div class="service-square-item__title h4">250k+ merchants in 180+ countries</div>
               <p class="service-square-item__text">
-                Top-5 most secure e-commerce platforms
+                Multi-language and multi-currency capabilities
               </p>
             </div>
           </div>
@@ -108,10 +110,11 @@
               <div class="service-square-item__image">
                 <img src="{{media url='wysiwyg/Service/magento-development/6.svg'}}" alt="" />
               </div>
-              <div class="service-square-item__title h4">5,000+ pre-built extensions</div>
+              <div class="service-square-item__title h4">Robust Security</div>
               <p class="service-square-item__text">
-                The most vibrant e-commerce ecosystem
+                Top-5 most secure e-commerce platforms
               </p>
+
             </div>
           </div>
           <!-- 6 -->
@@ -313,7 +316,7 @@
         </div>
         <button class="_button _button--arrow" onclick="window.location.href='/company'" style="margin-right: auto; margin-left: auto;">
           <span class="_button__text">More about us</span>
-          <span class="_button__text-overlay _button__text-overlay--black" style="clip: rect(0px, 0px, 24px, 0px)"
+          <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
           >More about us</span
           >
           <span class="_button__overlay _button__overlay--hover"></span>
