--- a/files for admin/CMS Pages/services/server-optimization.html
+++ b/files for admin/CMS Pages/services/server-optimization.html
@@ -220,49 +220,76 @@
       <!-- section label -->
       <div class="service-single__label _section-label" itemprop="keywords">Why choose us?</div>
       <div class="service-single__content">
-        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
-          Why are we better <br />
-          than others as a partner?
-        </h2>
-        <p>
-          We are confident that our experience guarantees the maximum possible Magento server <br />
-          performance as the Perspective team:
-        </p>
+        <div class="choose-us-header">
+          <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">
+            We’re a team that want to be a part
+            of a big story
+          </h2>
+          <p class="preface">
+            We developed projects of various scale and we have broad experience across all regions. Understanding the tendencies of the market and features of our clients’ mentality leads us to create a valuable concept. All of the projects we do are made for people. And that’s our priority.
+          </p>
+        </div>
+
         <div class="choose-us-table">
           <div class="choose-us-table__item">
             <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/server-optimization/15.svg'}}" alt="" />
+              <img src="{{media url='wysiwyg/Service/magento-development/9.svg'}}" alt="">
             </div>
             <p class="h4 choose-us-table__text">
-              has more than 10 years <br />
-              of experience in Magento server optimization and configuration
+              Official Adobe Partner
             </p>
           </div>
           <div class="choose-us-table__item">
             <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/server-optimization/16.svg'}}" alt="" />
+              <img src="{{media url='wysiwyg/Service/magento-development/10.svg'}}" alt="">
             </div>
             <p class="h4 choose-us-table__text">
-              works with projects of various scales so that we can find the optimal solution for any client
+              Compliance with Magento <br> Best Practices
             </p>
           </div>
-          <div class="choose-us-table__item choose-us-table__item--wide">
+          <div class="choose-us-table__item">
             <div class="choose-us-table__image">
-              <img src="{{media url='wysiwyg/Service/server-optimization/17.svg'}}" alt="" />
+              <img src="{{media url='wysiwyg/Service/magento-development/11.svg'}}" alt="">
             </div>
             <p class="h4 choose-us-table__text">
-              provides an SLA service that guarantees the quality of service and instant response to any issue on the
-              client's server
+              Magento Core Contributor
+            </p>
+          </div>
+          <div class="choose-us-table__item">
+            <div class="choose-us-table__image">
+              <img src="{{media url='wysiwyg/Service/magento-development/12.svg'}}" alt="">
+            </div>
+            <p class="h4 choose-us-table__text">
+              From design to optimization. End-to-end digital solutions
             </p>
           </div>
         </div>
+        <div class="choose-us-circle">
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">13</div>
+            <div class="choose-us-circle__text">  years <br>
+              of experience</div>
 
-        <button @click="window.location.href = `{{store url='company'}}`" class="_button _button--arrow">
-          <span class="_button__text">More about us</span>
-          <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)">More about us</span>
-          <span class="_button__overlay _button__overlay--hover"></span>
-          <span class="_button__overlay _button__overlay--active"></span>
-        </button>
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">70+</div>
+            <div class="choose-us-circle__text">highly qualified <br> teammebers</div>
+          </div>
+          <div class="choose-us-circle__item">
+            <div class="choose-us-circle__num _text-orange">100%</div>
+            <div class="choose-us-circle__text">Magento-only <br> focusing</div>
+          </div>
+        </div>
+        <a href="/company">
+          <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
+            <span class="_button__text">More about us</span>
+            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)"
+            >More about us</span
+            >
+            <span class="_button__overlay _button__overlay--hover"></span>
+            <span class="_button__overlay _button__overlay--active"></span>
+          </button>
+        </a>
       </div>
     </section>
 
