change-cms-page

--- a/files for admin/CMS Pages/services/magento-pwa.html
+++ b/files for admin/CMS Pages/services/magento-pwa.html
@@ -147,7 +147,7 @@
         This Service
       </div>
       <div class="service-single__content">
-        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">How do we provide<br> this service?</h2>
+        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">We deliver exceptional magento <br> pwa experiences</h2>
         <p class="preface">
         </p>
         <div class="service-single__collapsible _collapsible" x-data="{selected:null}">
