--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -237,7 +237,7 @@
         This Service
       </div>
       <div class="service-single__content">
-        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">How do We Provide <br> IT security audits?</h2>
+        <h2 class="h3 service-single__title" itemprop="name" style="margin-bottom: 16px">We Engineer Your <br> E-Commerce Safety </h2>
         <p class="preface">
           A regular IT security audit for an e-commerce website is crucial for protecting sensitive customer information and securing transactions from malicious activities. One of the critical vital aspects to consider when maintaining a security strategy is addressing the OWASP Top 10, a list compiled by the Open Web Application Security Project that identifies the most critical web application security vulnerabilities and risks.
         </p>
