--- a/files for admin/CMS Pages/services/server-optimization.html
+++ b/files for admin/CMS Pages/services/server-optimization.html
@@ -301,7 +301,7 @@
       <div class="service-single__content">
         <h2 class="h3 service-single__title title-provide" itemprop="name">We are obsessed with technology</h2>
 
-        <div class="service-single__collapsible _collapsible" x-data="{selected:null}">
+        <div class="service-single__collapsible _collapsible" x-data="{selected:1}">
           <!-- 1 -->
           <div data-role="collapsible" class="_collapsible__item" :class="{'active': selected == 1}">
             <div
